0.0.17
======

* Added the "cons3rt run cancel" and "cons3rt run release" CLI commands
* Added the "cons3rt cloudspace project list", "cons3rt cloudspace user list", and "cons3rt user list" CLI commands
* Greatly enhanced CLI output formatting!!!!
* Added a create_user() method for easy creation of users over rest api

0.0.16
======

* Added CLI commands cons3rt project run off, on, snapshot, and restore to manage runs at the project level
* Expanded the methods for listing site users via a new method list_users which take more options like user state and creation dates,
and added the ability to set max_results, and set the default to 500, which should significant speed up this query
* Improved releasing all active runs from a cloudspace, will now monitor each DR to reach COMPLETED or CANCELLED status
* Added a "RunWaiter" class for monitoring deployment runs reaching one of a list of desired states

0.0.15
======

* Added the capability to terminate a service runner process by converting from a threading.Thread to a multiprocessing.Process
* Cleaned up duplicate code fragments

0.0.14
======

* Added cloudwatchutil.py module for handling AWS cloudwatch

0.0.13
======

* Added a CLI command and method to delete cloudspaces for a cloud, and added returns for release runs in a cloudspace, and deleting runs in a cloudspace
* Added a method to retrieve details of a test asset
* Fixed running team reports from the CLI while providing the --config arg
* Added methods for assigning and unassigning project roles
* Added helpful methods for quickly assigning roles for project managers, asset developers, and express users in a project
* Added support for setting PYCONS3RT_HOME environment variable to keep the config, logs, etc. in a desired location
* Added support for AWS CLI environment variables AWS_CONFIG_FILE and AWS_SHARED_CREDENTIALS_FILE when performing login_as_role and setting the credentials files