@@ -43,6 +43,22 @@ project_manager_roles = ['PROJECT_OWNER', 'PROJECT_MANAGER', 'PROJECT_MODERATOR'
 # All valid roles combined
 valid_member_roles = express_roles + standard_roles + asset_developer_roles + project_manager_roles
 
+# Collab tools project names
+bitbucket_project_name = 'AtlassianBitbucket-project'
+confluence_project_name = 'AtlassianConfluence-project'
+jira_project_name = 'AtlassianJira-project'
+gitlab_premium_project_name = 'GitlabPremium-project'
+gitlab_ultimate_project_name = 'GitlabUltimate-project'
+mattermost_project = 'Mattermost-project'
+collab_tools_project_names = [
+    bitbucket_project_name,
+    confluence_project_name,
+    jira_project_name,
+    gitlab_premium_project_name,
+    gitlab_ultimate_project_name,
+    mattermost_project
+]
+
 
 class Cons3rtApi(object):
 
@@ -1226,6 +1242,46 @@ class Cons3rtApi(object):
         log.info('Found {n} projects owned by team [{t}] with ID: {i}'.format(
             n=str(len(owned_projects)), t=team_name, i=str(team_id)))
         return owned_projects
+
+    def list_collab_tools_projects_in_team(self, team_id):
+        """Returns a list of collab tools projects in a team
+
+        :param team_id: (int) team ID
+        :return: (list) of (dict) collab tools projects
+        :raises: Cons3rtApiError
+        """
+        log = logging.getLogger(self.cls_logger + '.list_collab_tools_projects_in_team')
+        log.info('Getting a list of collab tools projects in team: {i}'.format(i=str(team_id)))
+        collab_tools_projects = []
+        team_projects = self.list_projects_in_team(team_id=team_id)
+        for project in team_projects:
+            for collab_tools_project_name in collab_tools_project_names:
+                if project['name'].endswith(collab_tools_project_name):
+                    collab_tools_projects.append(project)
+                    log.info('Found collab tools project: {n}'.format(n=project['name']))
+        log.info('Found {n} collab tools projects in team ID: {i}'.format(
+            n=str(len(collab_tools_projects)), i=str(team_id)))
+        return collab_tools_projects
+
+    @staticmethod
+    def get_collab_tool_for_project_name(project_name):
+        """Given a project name, return the name of the collab tool or "None"
+
+        :param project_name: (str) name of the project
+        :return: (str) name of the collab tool or None
+        """
+        if project_name.endswith(bitbucket_project_name):
+            return 'ATLASSIAN_BITBUCKET'
+        elif project_name.endswith(confluence_project_name):
+            return 'ATLASSIAN_CONFLUENCE'
+        elif project_name.endswith(jira_project_name):
+            return 'ATLASSIAN_JIRA'
+        elif project_name.endswith(gitlab_premium_project_name):
+            return 'GITLAB_PREMIUM'
+        elif project_name.endswith(gitlab_ultimate_project_name):
+            return 'GITLAB_ULTIMATE'
+        elif project_name.endswith(mattermost_project):
+            return 'MATTERMOST'
 
     def get_system_details(self, system_id):
         """Query CONS3RT to retrieve system details
